# cxxcam

./: .cproject  .gitmodules  .project  Axis.cpp  Axis.h  CMakeLists.txt  GCode.cpp  GCode.h  GCodeBlock.cpp  GCodeBlock.h  GCodeLine.cpp  GCodeLine.h  GCodeWord.cpp  GCodeWord.h  Machine.cpp  Machine.h  MachineState.cpp  MachineState.h  Material.cpp  Material.h  Position.cpp  Position.h  README.md  Simulation.cpp  Simulation.h  Spindle.cpp  Spindle.h  Stock.cpp  Stock.h  TODO.md  Tool.cpp  Tool.h  ToolTable.cpp  ToolTable.h  nef_polyhedron.cpp  nef_polyhedron.h
include/: Axis.h  Configuration.h  Error.h  GCodeWord.h  Machine.h  Material.h  Offset.h  Path.h  Position.h  Stock.h  Tool.h  nef_polyhedron.h
include/cxxcam/: Axis.h  Error.h  GCodeWord.h  Limits.h  Math.h  Path.h  Units.h
include/geom/: aabb_tree.h  explode.h  io.h  ops.h  polyhedron.h  primitives.h  query.h  translate.h
include/nef/: explode.h  io.h  ops.h  polyhedron.h  primitives.h  translate.h
include/postp/: gcode.h
include/rs274ngc/: block.h  maybe.h  ops.h  rs274ngc.hh  rs274ngc_return.hh  setup.h  types.h
include/svg_path/: basic.h  numberlist.h  path.h  transform.h
src/: Axis.cpp  Bbox.cpp  Bbox.h  CMakeLists.txt  Configuration.cpp  Cutter.cpp  Cutter.h  GCode.cpp  GCode.h  GCodeBlock.cpp  GCodeBlock.h  GCodeLine.cpp  GCodeLine.h  GCodeModal.cpp  GCodeModal.h  GCodeWord.cpp  Limits.cpp  Limits.h  Machine.cpp  Machine.h  MachineState.cpp  MachineState.h  Material.cpp  Material.h  Math.cpp  Math.h  Offset.cpp  Path.cpp  Path.h  Position.cpp  Position.h  Simulation.cpp  Simulation.h  Spindle.cpp  Spindle.h  Stock.cpp  Stock.h  Tool.cpp  Tool.h  ToolTable.cpp  (+15 more)
src/geom/: CMakeLists.txt  CSGPrimitives3D.cpp  CSGPrimitives3D.h  Geometry.h  Point.cpp  aabb_tree.cpp  cgal.h  cgal_explode.h  copy_to.h  explode.cpp  io.cpp  ops.cpp  polyhedron.cpp  primitives.cpp  private.h  query.cpp  translate.cpp
src/nef/: CMakeLists.txt  CSGPrimitives3D.h  Geometry.h  Point.h  cgal.h  copy_to.h  explode.cpp  io.cpp  nef_polyhedron.cpp  nef_primitives.cpp  ops.cpp  polyhedron.cpp  primitives.cpp  private.h  translate.cpp
src/postp/: CMakeLists.txt  gcode.cpp
src/rs274ngc/: CMakeLists.txt  README.md  arc.cpp  arc.h  block.cpp  block.h  canon.hh  canon_pre.cc  codes.h  driver2.cc  error.cpp  error.h  maybe.h  ops.cpp  rs274ngc.hh  rs274ngc_errors.cc  rs274ngc_pre.cc  rs274ngc_return.hh  setup.cpp  setup.h  types.cpp  types.h
src/rs274ngc/interp/: CMakeLists.txt  interpreter.cpp  interpreter.h  units.h
src/rs274ngc/old/: canon_pre.cc  driver.cc
src/svg_path/: CMakeLists.txt  basic.cpp  numberlist.cpp  path.cpp  transform.cpp
test/: 3D_Chips.ngc  CMakeLists.txt  axes.cpp  bbox.cpp  configuration.cpp  die_if.h  ex_newsim.cpp  ex_rate.cpp  ex_trochoid.cpp  fold_adjacent.cpp  geom_basic.cpp  geom_cube.cpp  geom_cube2.cpp  geom_cube_io.cpp  geom_cylinder.cpp  geom_explode.cpp  geom_nonmanifold.cpp  geom_sphere.cpp  geom_sphere_io.cpp  geom_tet_mesh.cpp  geom_tools.cpp  geom_translate.cpp  geom_validate_boolean.cpp  geom_validate_rotations.cpp  helix.cpp  inverse_time.cpp  lathe_basic.cpp  limits.cpp  math.cpp  mill_basic.cpp  model.cpp  nef_basic.cpp  nef_cube.cpp  nef_cube2.cpp  nef_cube_io.cpp  nef_cylinder.cpp  nef_explode.cpp  nef_models.cpp  nef_nonmanifold.cpp  nef_sphere.cpp  (+21 more)
