
IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
ENDIF()

#INCLUDE_DIRECTORIES( )
ADD_LIBRARY(rs274ngc STATIC rs274ngc_errors.cc rs274ngc_pre.cc)
TARGET_LINK_LIBRARIES(rs274ngc m)

ADD_DEFINITIONS(-DAA -DBB -DCC)
ADD_EXECUTABLE(driver driver2.cc canon_pre.cc)
TARGET_LINK_LIBRARIES(driver rs274ngc)

ADD_SUBDIRECTORY(interp)
